load wofi on memory icon

--- a/config.jsonc
+++ b/config.jsonc
@@ -72,7 +72,8 @@
         "tooltip": false
     },
     "memory": {
-        "format": "{used} Gb "
+        "format": "{used} Gb ",
+        "on-click": "wofi --show drun"
     },
     "temperature": {
         // "thermal-zone": 2,
