--- a/config.jsonc
+++ b/config.jsonc
@@ -7,7 +7,7 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-        "custom/hyprland_workspaces",
+        "hyprland/workspaces",
         "custom/window"
     ],
     "modules-center": [
@@ -22,13 +22,26 @@
         "clock",
         "custom/power"
     ],
-    "custom/hyprland_workspaces": {
+    "hyprland/workspaces": {
 //        "exec": "/home/yoel/.config/waybar/scripts/hyprland_workspaces.sh",
 //        "interval": 2,
 //        "return-type": "json",
 //        "format": "{name}",
-        "on-click": "hyprctl dispatch workspace e+1",
-        "on-click-right": "hyprctl dispatch workspace e-1"
+//        "on-click": "hyprctl dispatch workspace e+1",
+//        "on-click-right": "hyprctl dispatch workspace e-1""format": "{icon}",
+          "format": "{icon}",
+          "on-click": "activate",
+          "format-icons": {
+             "1": "",
+             "2": "",
+             "3": "",
+             "4": "",
+             "5": "",
+             "urgent": "",
+             "active": "",
+             "default": ""
+        },
+          "sort-by-number": true
     },
 
  //   "custom/window": {
@@ -70,8 +83,6 @@
                     },      
         "actions":  {
                     "on-click-right": "mode",
-                    "on-scroll-up": "tz_up",
-                    "on-scroll-down": "tz_down",
                     "on-scroll-up": "shift_up",
                     "on-scroll-down": "shift_down"
                     }
